# clarke-wright-savings-alg

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  header.html
.github/workflows/: codeql.yml  doxygen-pages.yml
clarke-wright-savings-alg/: CMakeLists.txt  main.cpp
clarke-wright-savings-alg/include/geometry/: visualization.h
clarke-wright-savings-alg/include/model/: clark_wright_alg.h  solver.h  subsets.h
clarke-wright-savings-alg/src/geometry/: visualization.cpp
clarke-wright-savings-alg/src/model/: clark_wright_alg.cpp  solver.cpp
clarke-wright-savings-alg/tests/: CMakeLists.txt  test_example.cpp
graph-solvers-template/: CMakeLists.txt  main.cpp
graph-solvers-template/include/common/: types.h
graph-solvers-template/include/geometry/: visualization.h
graph-solvers-template/include/model/: clark_wright_alg.h  clarke_wright.h  solver.h  subsets.h
graph-solvers-template/src/common/: types.cpp
graph-solvers-template/src/geometry/: visualization.cpp
graph-solvers-template/src/model/: clark_wright_alg.cpp  clarke_wright.cpp  solver.cpp
latex-docs/: main.tex
